Work towards removing the RunConfig DTO.